// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba de GifExpertApp debe mostrar el componente correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</Fragment>
`;

exports[`Prueba de GifExpertApp debe mostrar el componente correctamente con Goku como categoria 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="Goku"
    key="Goku"
  />
</Fragment>
`;
